# pealayer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  implementation.md
.github/workflows/: ci-cd.yml
src/: app.rs  config.rs  main.rs
src/four_d/: engine.rs  mod.rs  models.rs  patterns.rs
src/mpv/: render.rs
src/platform/: association.rs  interop.rs  mod.rs  windows.rs
src/server/: fs_api.rs  mod.rs  thumbnails.rs  web_assets.rs
src/ui/: audio.rs  controls.rs  error.rs  four_d.rs  layout.rs  menu.rs  mod.rs  osd.rs  status_bar.rs  subtitles.rs  video.rs
